      - display error in error box
      - fixed 'not defined function'
    * libraries/dbg/profiling.php:
      - minor fixes: html output, speed, rtl lang
    * tbl_realtion.php:
      - fixed html output of table
      - used fieldset for forms
    * libraries/common.lib.php, browse_foreigners.php:
      - replaced $cfg['Bgcolor*'] with classes
      - make use of fieldset
      
2005-11-01 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: undefined variable when changing a password

2005-11-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php:
      bug #1342332 Error messages wrongly formatted.
    * themes/*/css/theme_right.css.php:
       - fixed some rtl languages issues
       - added style for notice box (server_export.php)

2005-10-31 Sebastian Mendel <cybot_tm@users.sourceforge.net>
	* themes/*/css/theme_right.css.php:
	   - use right image path
	   - fixed icon alignment for rtl languages
	* main.php, phpmyadmin.css.php, libraries/mysql_charsets.lib.php:
	   - fixed some rtl language issues
	* favicon.ico: changed icon
	
2005-10-31 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: do not display No under the Password column
      if this is not a "real user" definition

2005-10-31 Michal Čihař  <michal@cihar.com>
    * libraries/select_lang.lib.php: Simplify code.
    * libraries/common.lib.php: Allow collation change for ENUM and SET
      columns (bug #1343627).
    * main.php: Use normal message on reload, not just plain text.
    * themes/darkblue_orange/css/theme_right.css.php,
      themes/original/css/theme_right.css.php: Fix URL for cursor (bug
      #1342683).

2005-10-30 Michal Čihař  <michal@cihar.com>
    * lang/slovak: Update, thanks to Ivan Kuriscak - shylauda69.
    * lang/*: Remove duplicite message.
    * lang/sync_lang.sh: Sync japanese also, it works now (at least for me).
    * lang/japanese: Update, thanks to Tadashi Jokagi - elf2000.