@@ -1,3 +1,13 @@
 .print_ignore {
     display: none;
 }
+
+table,
+table tr td,
+table tr th {
+	border: 1px solid black;
+	border-collapse: collapse;
+	background-color: white;
+	color: white;
+	font-size: 8pt;
+}
