@@ -17,6 +17,9 @@ $Source$
     * libraries/common.lib.php, browse_foreigners.php:
       - replaced $cfg['Bgcolor*'] with classes
       - make use of fieldset
+    * css/print.css, dbv_datadict.php:
+      - replaced $cfg['Bgcolor*'] with classes
+      - reduced output size by 40%
       
 2005-11-01 Marc Delisle  <lem9@users.sourceforge.net>
     * server_privileges.php: undefined variable when changing a password
